--- a/src/Components/Parallax/Parallax.css
+++ b/src/Components/Parallax/Parallax.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background-image: url(../../Assets/Img/Hero/xerox2.jpg);
+    background-image: url(../../Assets/Img/Hero/xeroxp.jpg);
   
     /* Set a specific height */
     min-height: 500px; 
