se realizan modificaciones en formulario

--- a/src/Components/Separator/Separator.css
+++ b/src/Components/Separator/Separator.css
@@ -1,6 +1,7 @@
 .separator_style{
-    background-color: rgb(199, 25, 25);
+    background-color: rgb(215, 58, 58);
     height: 1px;
     width: 90%;
     margin: 1.5rem auto;
+    opacity: 0.3;
 }
